add quick start
Signed-off-by: garyschulte <garyschulte@gmail.com>